--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
-    background: rgb(255,255,255);
-background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(208,255,140,1) 35%, rgba(255,0,125,1) 100%);    
+  background: rgb(208,255,140);
+  background: linear-gradient(90deg, rgba(208,255,140,1) 0%, rgba(255,0,125,1) 100%);
 }
 
 /* Bordered form */
@@ -73,9 +73,7 @@ form {
     .cancelbtn {
       width: 100%;
     }
-  }
-
-
+  }  
   .columna {
 
     float: left;
@@ -93,4 +91,5 @@ form {
   .containerPregunta {
     background-color: #f5f5f5;
     padding: 1rem;
+    margin: 0.5rem;
   }
