--- a/css/estiloTarjeta.css
+++ b/css/estiloTarjeta.css
@@ -1,4 +1,5 @@
 body {
+  margin: 8em;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -6,8 +7,7 @@ body {
 .tarjeta {
     background-color: transparent;
     width: 800px;
-    height: 400px;
-    border: 1px solid #f1f1f1;
+    height: 495px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
@@ -29,13 +29,14 @@ body {
     left: 50px;
     top: 50px;
     width: 700px;
-    height: 300px;
+    height: 400px;
     background-color: #f1f1f1;
+    font-size:3rem;
 
   }
 
   .tarjeta-contenido {
-      
+      font-size: 3rem;
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
