--- a/css/estilos.css
+++ b/css/estilos.css
@@ -82,7 +82,7 @@ form {
   .columna {
 
     float: left;
-    width: 45%;
+    width: 90%;
     padding: 1rem;
   }
 
@@ -97,4 +97,12 @@ form {
     background-color: #f5f5f5;
     padding: 1rem;
     margin: 0.5rem;
+  }
+
+.ready::before {
+    color:#04AA6D;
+  }
+
+.notready::before {
+   color:#f44336;
   }
