Lista de respuestas funcional a falta de ajustar SISTEMA DE RANKING por partida/sesión. IMPLEMENTADO SISTEMA DE ASIGNACION DE EVENTOS A ELEMENTOS DE FORMA DINAMICA USANDO DELEGACION DE EVENTOS. MUY INTERESANTE

--- a/css/botonera.css
+++ b/css/botonera.css
@@ -6,7 +6,7 @@
 }
 
 li {
-    font-size:2em;
+    font-size:1em;
 }
 li.ready {
     color:greenyellow;
@@ -14,6 +14,9 @@ li.ready {
 
 li.notready {
     color:red;
+}
+li label {
+    color:black;
 }
 
 body {
